# CommandRecognizer

./: .gitignore  CMakeLists.txt  make.bat  patterns-config.cmake
src/: CMakeLists.txt  CommandRecognizer.cpp  CommandRecognizer.h  CommandRelated.h  IPatternMatcher.h  MultiHeaderPatterns.cpp  MultiHeaderPatterns.h  Pattern.h  PatternMatcher.cpp  PatternMatcher.h  SingleHeaderPatterns.cpp  SingleHeaderPatterns.h
